// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination[Base] should render correctly  1`] = `
<div
  class="c-r3kqy9 c-8xwqpw"
>
  <div
    class="c8idq1c c-k2yd04"
  >
    <button
      class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
      disabled=""
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
      type="button"
    >
      1
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      2
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      3
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      4
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      5
    </button>
    <button
      class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      10
    </button>
    <button
      class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about align 1`] = `
<div>
  <div
    class="c-r3kqy9 c-8xwqpw"
    style="margin-bottom: 24px;"
  >
    <div
      class="c8idq1c c-k2yd04"
    >
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
        disabled=""
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
        type="button"
      >
        1
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        2
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        3
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        4
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        5
      </button>
      <button
        class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        10
      </button>
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-r3kqy9 c-2po186"
    style="margin-bottom: 24px;"
  >
    <div
      class="c8idq1c c-k2yd04"
    >
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
        disabled=""
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
        type="button"
      >
        1
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        2
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        3
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        4
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        5
      </button>
      <button
        class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        10
      </button>
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-r3kqy9 c70mjnr"
  >
    <div
      class="c8idq1c c-k2yd04"
    >
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
        disabled=""
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
        type="button"
      >
        1
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        2
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        3
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        4
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        5
      </button>
      <button
        class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        10
      </button>
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about control 1`] = `
<div>
  <div
    style="display: flex; align-items: center; margin-bottom: 24px;"
  >
    <span
      style="font-size: 14px;"
    >
      Jump to
    </span>
    <div
      class="c62jszx c5g1ick"
      data-soui-type="input"
      style="width: 80px; margin-left: 8px;"
    >
      <div
        class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
      >
        <input
          class="cccsm1n"
          type="text"
          value="1"
        />
      </div>
      <div
        class="c-jaruk"
      >
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-r3kqy9 c-8xwqpw"
  >
    <div
      class="c8idq1c c-k2yd04"
    >
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
        disabled=""
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
        type="button"
      >
        1
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        2
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        3
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        4
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        5
      </button>
      <button
        class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        10
      </button>
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about disabled 1`] = `
<div
  class="c-r3kqy9 c-8xwqpw"
>
  <div
    class="c8idq1c"
  >
    <span>
      total 500
    </span>
  </div>
  <div
    class="c8idq1c c-k2yd04"
  >
    <button
      class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
      disabled=""
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cse7e56 c-trc8a3 cvey2f3 conix1l c-vmlc9i"
      disabled=""
      type="button"
    >
      1
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
      disabled=""
      type="button"
    >
      2
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
      disabled=""
      type="button"
    >
      3
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
      disabled=""
      type="button"
    >
      4
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
      disabled=""
      type="button"
    >
      5
    </button>
    <button
      class="c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
      disabled=""
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
      disabled=""
      type="button"
    >
      50
    </button>
    <button
      class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
      disabled=""
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="c8idq1c c-lyvyj0"
  >
    <div
      class="c-k1257o co2pi9k"
      data-soui-type="input"
      tabindex="-1"
    >
      <div
        class="c-hka1dt c8hos3a crwdlef c9869pl"
      >
        <div
          class="c-lj7los"
        >
          <div
            class="cml870y"
          >
            <span
              class="c-f5w80o"
            >
              10  / page
            </span>
          </div>
        </div>
      </div>
      <span
        class="c-fjov4l"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="c8idq1c cufb2o"
  >
    <span
      class="c8idq1c"
    >
      Go to 
    </span>
    <div
      class="c8idq1c cnaztga c5g1ick c-pt79s0"
      data-soui-type="input"
      style="width: 56px;"
    >
      <div
        class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
      >
        <input
          class="cccsm1n"
          disabled=""
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="c8idq1c"
    >
       Page
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about jumper 1`] = `
<div
  class="c-r3kqy9 c-8xwqpw"
>
  <div
    class="c8idq1c c-k2yd04"
  >
    <button
      class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
      disabled=""
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
      type="button"
    >
      1
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      2
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      3
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      4
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      5
    </button>
    <button
      class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      10
    </button>
    <button
      class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="c8idq1c cufb2o"
  >
    <span
      class="c8idq1c"
    >
      Go to 
    </span>
    <div
      class="c8idq1c cnaztga c5g1ick"
      data-soui-type="input"
      style="width: 56px;"
    >
      <div
        class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
      >
        <input
          class="cccsm1n"
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="c8idq1c"
    >
       Page
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about mode 1`] = `
<div>
  <div
    class="c-r3kqy9 c-8xwqpw"
    style="margin-bottom: 24px;"
  >
    <div
      class="c8idq1c c-k2yd04"
    >
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
        disabled=""
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
        type="button"
      >
        1
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        2
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        3
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        4
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        5
      </button>
      <button
        class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        10
      </button>
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-r3kqy9 c-8xwqpw"
  >
    <div
      class="c8idq1c c-k2yd04"
    >
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l cs6jo0l c-vmlc9i"
        disabled=""
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
        type="button"
      >
        1
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 cs6jo0l c-vmlc9i"
        type="button"
      >
        2
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 cs6jo0l c-vmlc9i"
        type="button"
      >
        3
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 cs6jo0l c-vmlc9i"
        type="button"
      >
        4
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 cs6jo0l c-vmlc9i"
        type="button"
      >
        5
      </button>
      <button
        class="c-489olr cse7e56 c-rg592x cvey2f3 cs6jo0l c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 cs6jo0l c-vmlc9i"
        type="button"
      >
        10
      </button>
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 cs6jo0l c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about simple 1`] = `
<div
  class="c-r3kqy9 c-8xwqpw"
>
  <button
    class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
    disabled=""
    type="button"
  >
    <span
      class="c-8xyoya"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
        />
      </svg>
    </span>
  </button>
  <div
    class="c8idq1c cufb2o"
  >
    <div
      class="c8idq1c cnaztga c5g1ick"
      data-soui-type="input"
      style="width: 56px;"
    >
      <div
        class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
      >
        <input
          class="cccsm1n"
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="c8idq1c c71aww5"
    >
      /
    </span>
    <span
      class="c8idq1c"
    >
      5
    </span>
  </div>
  <button
    class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
    type="button"
  >
    <span
      class="c-8xyoya"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Pagination[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-r3kqy9 c-8xwqpw c718rua"
    style="margin-bottom: 24px;"
  >
    <div
      class="c8idq1c c-k2yd04"
    >
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i c-x3mwbq"
        disabled=""
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i c-x3mwbq"
        type="button"
      >
        1
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x3mwbq"
        type="button"
      >
        2
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x3mwbq"
        type="button"
      >
        3
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x3mwbq"
        type="button"
      >
        4
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x3mwbq"
        type="button"
      >
        5
      </button>
      <button
        class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x3mwbq"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x3mwbq"
        type="button"
      >
        10
      </button>
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x3mwbq"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-r3kqy9 c-8xwqpw"
    style="margin-bottom: 24px;"
  >
    <div
      class="c8idq1c c-k2yd04"
    >
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
        disabled=""
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
        type="button"
      >
        1
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        2
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        3
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        4
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        5
      </button>
      <button
        class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        10
      </button>
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-r3kqy9 c-8xwqpw c6x6wbq"
  >
    <div
      class="c8idq1c c-k2yd04"
    >
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i c-x7orua"
        disabled=""
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i c-x7orua"
        type="button"
      >
        1
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x7orua"
        type="button"
      >
        2
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x7orua"
        type="button"
      >
        3
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x7orua"
        type="button"
      >
        4
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x7orua"
        type="button"
      >
        5
      </button>
      <button
        class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x7orua"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x7orua"
        type="button"
      >
        10
      </button>
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i c-x7orua"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about span 1`] = `
<div>
  <div
    class="c-r3kqy9 c-8xwqpw"
    style="margin-bottom: 24px;"
  >
    <div
      class="c8idq1c c-k2yd04"
    >
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
        disabled=""
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
        type="button"
      >
        1
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        2
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        3
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        4
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        5
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        6
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        7
      </button>
      <button
        class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        10
      </button>
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-r3kqy9 c-8xwqpw"
  >
    <div
      class="c8idq1c c-k2yd04"
    >
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        1
      </button>
      <button
        class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        5
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        6
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        7
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        8
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        9
      </button>
      <button
        class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
        type="button"
      >
        10
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        11
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        12
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        13
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        14
      </button>
      <button
        class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        100
      </button>
      <button
        class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
        type="button"
      >
        <span
          class="c-8xyoya"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about text 1`] = `
<div
  class="c-r3kqy9 c-8xwqpw"
>
  <div
    class="c8idq1c c-k2yd04"
  >
    <button
      class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu"
      disabled=""
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Previous
      </span>
    </button>
    <button
      class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
      type="button"
    >
      1
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      2
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      3
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      4
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      5
    </button>
    <button
      class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      26
    </button>
    <button
      class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Next
      </span>
    </button>
  </div>
  <div
    class="c8idq1c c-lyvyj0"
  >
    <div
      class="c-k1257o"
      data-soui-type="input"
      tabindex="0"
    >
      <div
        class="c-hka1dt c8hos3a crwdlef c9869pl"
      >
        <div
          class="c-lj7los"
        >
          <div
            class="cml870y"
          >
            <span
              class="c-f5w80o"
            >
              10  / page
            </span>
          </div>
        </div>
      </div>
      <span
        class="c-fjov4l"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="c8idq1c"
  >
    <span>
      1 to 10 of 256 items
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about total 1`] = `
<div
  class="c-r3kqy9 c-8xwqpw"
>
  <div
    class="c8idq1c"
  >
    <span>
      total 500
    </span>
  </div>
  <div
    class="c8idq1c c-k2yd04"
  >
    <button
      class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 conix1l c-nzauiu c-vmlc9i"
      disabled=""
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cse7e56 c-trc8a3 cvey2f3 c-vmlc9i"
      type="button"
    >
      1
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      2
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      3
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      4
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      5
    </button>
    <button
      class="c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      50
    </button>
    <button
      class="c8idq1c c-489olr cse7e56 c-rg592x cvey2f3 c-nzauiu c-vmlc9i"
      type="button"
    >
      <span
        class="c-8xyoya"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
